--- a/.gitignore
+++ b/.gitignore
@@ -957,3 +957,5 @@ Arthas/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 参考资料/
 Arthas/obj/
 Asset.UserInterfacelayer/bin/
+Asset.UserInterfacelayer/DB/PCRepair_Data.MDF
+Asset.UserInterfacelayer/DB/PCRepair_Log.LDF
