--- a/.gitignore
+++ b/.gitignore
@@ -954,3 +954,6 @@ Arthas/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 .vs/Asset/v15/Server/sqlite3/storage.ide-shm
 .vs/Asset/v15/Server/sqlite3/storage.ide-wal
 .vs/Asset/v15/.suo
+Asset.UserInterfacelayer/bin/Debug/config.ini
+Asset.UserInterfacelayer/DB/PCRepair_Data.MDF
+Asset.UserInterfacelayer/DB/PCRepair_Log.LDF
