增加审核维修资产

--- a/Asset.UserInterfacelayer/Asset.UserInterfacelayer.csproj
+++ b/Asset.UserInterfacelayer/Asset.UserInterfacelayer.csproj
@@ -197,6 +197,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\password.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\account.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
