--- a/Asset.CommonComponent/Asset.CommonComponent.csproj
+++ b/Asset.CommonComponent/Asset.CommonComponent.csproj
@@ -41,12 +41,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="ThoughtWorks.QRCode">
+      <HintPath>..\dll\ThoughtWorks.QRCode.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Encrypt.cs" />
     <Compile Include="IniFiles.cs" />
     <Compile Include="PictureSlightly.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QRcode.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Asset.DataAccessLayer\Asset.DataAccessLayer.csproj">
